--- a/index.html
+++ b/index.html
@@ -85,6 +85,26 @@
       // the writeup to view the URL pattern for fetch one and fetch all
       function fetchAll() {
         // TODO
+        document.getElementById('recordForm').style.display = 'none';
+        document.getElementById('recordIDcontainer').style.display = 'none';
+
+        let endpoint = document.getElementById('endpoint').value;
+        fetch(endpoint)
+          .then(
+            function(response) {
+              if (response.status !== 200) {
+                document.getElementById('output').textContent = 'Network Error: ' + response.status;
+                return;
+              }
+
+              response.json().then(function(data) {
+                document.getElementById('output').textContent = JSON.stringify(data);
+              });
+            }
+          )
+          .catch(function(err) {
+            console.log('Fetch Error :-S', err);
+          });
       }
 
       // This function should fetch one entry from the given endpoint.
@@ -93,22 +113,129 @@
       // the writeup to view the URL pattern for fetch one and fetch all
       function fetchOne() {
         // TODO
+        document.getElementById('recordForm').style.display = 'none';
+        document.getElementById('recordIDcontainer').style.display = 'none';
+
+        let endpoint = document.getElementById('endpoint').value;
+        let id = window.prompt('Enter record id: ');
+        fetch(endpoint + '/' + id)
+          .then(
+            function(response) {
+              if (response.status !== 200) {
+                document.getElementById('output').textContent = 'Network Error: ' + response.status;
+                return;
+              }
+
+              response.json().then(function(data) {
+                document.getElementById('output').textContent = JSON.stringify(data)
+              });
+            }
+          )
+          .catch(function(err) {
+            console.log('Fetch Error :-S', err);
+          });
       }
 
       // This function should use fetch to create one entry in the given endpoint.
       // From the 4 CRUD actions, this is the CREATE action, and uses the POST http method.
       // The main difference from updateRecord() will be the URL you send data to; check
       // the writeup to view the URL pattern for create and update
-      function createRecord() {
+      function createRecord(action) {
         // TODO
+        let recordForm = document.getElementById('recordForm');
+        let recordIDcontainer = document.getElementById('recordIDcontainer');
+        let endpoint = document.getElementById('endpoint').value;
+
+        if (action == 'show') {
+          recordForm.style.display = 'block';
+          recordIDcontainer.style.display = 'none';
+
+          recordForm.author.value = '';
+          recordForm.title.value = '';
+        }
+        else if (action == 'submit') {
+          let author = recordForm.author.value;
+          let title = recordForm.title.value;
+          const data = {
+            author: author,
+            title: title
+          };
+
+          fetch(endpoint, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data),
+          })
+          .then(
+            function(response) {
+              if (response.status !== 201) {
+                document.getElementById('output').textContent = 'Network Error: ' + response.status;
+                return;
+              }
+
+              response.json().then(function(data) {
+                document.getElementById('output').textContent = JSON.stringify(data);
+              });
+            }
+          )
+          .catch(function(err) {
+            console.log('Fetch Error :-S', err);
+          });
+        }
       }
 
       // This function should use fetch to update one existing entry in the given endpoint.
       // From the 4 CRUD actions, this is the UPDATE action, and uses the PUT http method.
       // The main difference from createRecord() will be the URL you send data to; check
       // the writeup to view the URL pattern for create and update
-      function updateRecord() {
+      function updateRecord(action) {
         // TODO
+        let recordForm = document.getElementById('recordForm');
+        let recordIDcontainer = document.getElementById('recordIDcontainer');
+        let endpoint = document.getElementById('endpoint').value;
+
+        if (action == 'show') {
+          recordForm.style.display = 'block';
+          recordIDcontainer.style.display = 'block';
+
+          recordForm.author.value = '';
+          recordForm.title.value = '';
+          recordForm.recordID.value = '';
+        }
+        else if (action == 'submit') {
+          let author = recordForm.author.value;
+          let title = recordForm.title.value;
+          let recordID = recordForm.recordID.value;
+          const data = {
+            author: author,
+            title: title
+          };
+
+          fetch(endpoint + '/' + recordID, {
+            method: 'PUT',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data),
+          })
+          .then(
+            function(response) {
+              if (response.status !== 200) {
+                document.getElementById('output').textContent = 'Network Error: ' + response.status;
+                return;
+              }
+
+              response.json().then(function(data) {
+                document.getElementById('output').textContent = JSON.stringify(data);
+              });
+            }
+          )
+          .catch(function(err) {
+            console.log('Fetch Error :-S', err);
+          });
+        }
       }
 
       // This function should use fetch to delete one existing entry in the given endpoint.
@@ -118,6 +245,29 @@
       // delete all, only delete one.
       function deleteRecord() {
         // TODO
+        document.getElementById('recordForm').style.display = 'none';
+        document.getElementById('recordIDcontainer').style.display = 'none';
+
+        let endpoint = document.getElementById('endpoint').value;
+        let id = window.prompt('Enter record id: ');
+        fetch(endpoint + '/' + id, {
+          method: 'DELETE'
+        })
+          .then(
+            function(response) {
+              if (response.status !== 200) {
+                document.getElementById('output').textContent = 'Network Error: ' + response.status;
+                return;
+              }
+
+              response.json().then(function(data) {
+                document.getElementById('output').textContent = JSON.stringify(data)
+              });
+            }
+          )
+          .catch(function(err) {
+            console.log('Fetch Error :-S', err);
+          });
       }
 
       window.addEventListener('DOMContentLoaded', () => {
